--- a/index.html
+++ b/index.html
@@ -10,15 +10,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
-            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+            <h3 class="nav-title">Rid<span class="text-primary">o</span>y</h3>
             <ul>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
                 <li><button class="btn-primary">Hire me</button></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-contain">
+                <h4 class="banner-greeting">Hi, I am Ridoy</h4>
+                <h1 class="banner-title">Ridoy Mojumder</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download cv</button>
+                <button class="btn-primary">COntact</button>
+            </div>
+            <img class="profile-pic" src="images/hardy.png" alt="">
+        </div>
 
     </header>
     <main>
