add css in this project

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Project</title>
-    <link rel="stylesheet" href="/style/blog.css">
+    <link rel="stylesheet" href="./style/blog.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/06de4e38d7.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -24,8 +25,8 @@
                 <h4 class="banner-greeting">Hi, I am Ridoy</h4>
                 <h1 class="banner-title">Ridoy Mojumder</h1>
                 <p class="banner-discraption">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download cv</button>
-                <button class="btn-primary">COntact</button>
+                <button class="btn-primary"><i class="fa-solid fa-circle-down"></i> Download cv</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact </button>
             </div>
             <img class="profile-pic" src="images/hardy.png" alt="">
         </div>
